dfir_rs/tests/compile-fail-stable/surface_partition_badarg.stderr
error: Argument must be a two-argument closure expression
 --> tests/compile-fail-stable/surface_partition_badarg.rs:5:56
  |
5 |         my_partition = source_iter(0..10) -> partition(std::mem::drop);
  |                                                        ^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
  --> tests/compile-fail-stable/surface_partition_badarg.rs:10:8
   |
10 |     df.run_available_sync();
   |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
